<?xml version="1.0"?>
<package>
  <name>au_sensors</name>
  <version>0.0.1</version>
  <description>The Aqua Ursa Sensors package</description>

  <maintainer email="waqar@arvp.org">Rumman Waqar</maintainer>

  <license>TODO</license>

  <!--<url type="website">http://wiki.ros.org/au_sensors</url>-->

  <author email="waqar@arvp.org">Rumman Waqar</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libi2c-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>gscam</build_depend>
  <run_depend>gscam</run_depend>
  <run_depend>cv_camera</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
</package>
